ANOVA test for `grow_temp` ~ `sunlight`

--- a/2026_02_03_edible_plants_database/edible_plants_database.qmd
+++ b/2026_02_03_edible_plants_database/edible_plants_database.qmd
@@ -61,6 +61,8 @@ edible_plants <- edible_plants |>
 ```
 
 ```{r}
+res.aov <- aov(grow_temp ~ sunlight, data = edible_plants)
 
+broom::tidy(res.aov)
 ```
 
